# advent-of-code-2017-ai

./: AOC_AUTOMATION.md  CLAUDE.md  Cargo.toml  README.md  comments.json
.claude/: settings.local.json
.claude/agents/: aoc-puzzle-fetcher.md  puzzle-review-watcher.md  puzzle-solution-augmenter.md  puzzle-solver.md
.github/workflows/: test.yml  validate-solutions.yml
src/: lib.rs  main.rs
src/solutions/: mod.rs
src/solutions/day01/: mod.rs  puzzle.txt
src/solutions/day02/: mod.rs  puzzle.txt
src/solutions/day03/: mod.rs  puzzle.txt
src/solutions/day04/: mod.rs  puzzle.txt
src/solutions/day05/: mod.rs  puzzle.txt
src/solutions/day06/: mod.rs  puzzle.txt
src/solutions/day07/: mod.rs  puzzle.txt
src/solutions/day08/: mod.rs  puzzle.txt
src/solutions/day09/: mod.rs  puzzle.txt
src/solutions/day10/: mod.rs  puzzle.txt
src/solutions/day11/: mod.rs  puzzle.txt
src/solutions/day12/: mod.rs  puzzle.txt
src/solutions/day13/: mod.rs  puzzle.txt
src/solutions/day14/: mod.rs  puzzle.txt
src/solutions/day15/: mod.rs  puzzle.txt
src/solutions/day16/: mod.rs  puzzle.txt
src/solutions/day17/: mod.rs  puzzle.txt
src/solutions/day18/: mod.rs  puzzle.txt
src/solutions/day19/: mod.rs  puzzle.txt
src/solutions/day20/: mod.rs  puzzle.txt
src/solutions/day21/: mod.rs  puzzle.txt
src/solutions/day22/: mod.rs  puzzle.txt
src/solutions/day23/: mod.rs  puzzle.txt
src/solutions/day24/: mod.rs  puzzle.txt
src/utils/: graph.rs  grid.rs  hash.rs  input.rs  math.rs  mod.rs
tools/fetch/: Cargo.toml
tools/submit/: Cargo.toml
(+9 files in other folders)
