[package]
name = "advent-of-code-2017"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "tools/fetch",
    "tools/submit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]

[workspace.dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.17"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"